[gd_scene load_steps=3 format=3 uid="uid://djco5wn11qoj2"]

[ext_resource type="PackedScene" uid="uid://dof4bc0xrdtbm" path="res://scenes/ActionMachineEditor.tscn" id="1_cj3al"]
[ext_resource type="Script" path="res://scripts/action_menu.gd" id="1_ikrfo"]

[node name="ActionMenu" type="Control" node_paths=PackedStringArray("action_name_label", "purchase_machines_button")]
custom_minimum_size = Vector2(240, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -912.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ikrfo")
action_name_label = NodePath("Control/ActionNameLabel")
purchase_machines_button = NodePath("Control/PurchaseMachineButton")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionNameLabel" type="Label" parent="Control"]
layout_mode = 1
offset_right = 215.0
offset_bottom = 31.0
text = "Action Name
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="PurchaseMachineButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 34.0
offset_right = 236.0
offset_bottom = 65.0
text = "Purchase Machine"

[node name="ActionMachineEditor" parent="Control" instance=ExtResource("1_cj3al")]
layout_mode = 0
offset_left = 4.0
offset_top = 70.0
offset_right = 236.0
offset_bottom = 186.0

[connection signal="pressed" from="Control/Close Button" to="." method="close_menu"]
[connection signal="focus_entered" from="Control/PurchaseMachineButton" to="." method="gain_focus"]
[connection signal="focus_exited" from="Control/PurchaseMachineButton" to="." method="lose_focus"]
[connection signal="mouse_entered" from="Control/PurchaseMachineButton" to="." method="set_filter"]
[connection signal="mouse_exited" from="Control/PurchaseMachineButton" to="." method="unset_filter"]
[connection signal="pressed" from="Control/PurchaseMachineButton" to="." method="attempt_machine_purchase"]
